--- a/ClientApp/src/components/NavMenu.css
+++ b/ClientApp/src/components/NavMenu.css
@@ -14,6 +14,45 @@ html {
     }
 }
 
+@media only screen and (max-width: 700px) {
+    .navbar-nav li {
+        margin-right: 20px !important;
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    .navbar-nav li {
+        margin-right: 15px !important;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .navbar-nav li {
+        margin-right: 10px !important;
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .lifearth-logo {
+        height: 40px !important;
+        top: 10px !important;
+    }
+
+    .container {
+        padding-bottom: 10px !important;
+    }
+
+    .navbar-toggler-icon {
+        margin-top: 0px !important;
+    }
+
+    .text-dark.nav-link {
+        padding-top: 15px !important;
+        padding-bottom: 0px !important;
+        padding-left: 30px;
+    }
+}
+
 .navbar {
     background-color: #F8FDEB;
     font-family: 'Freestyle Script';
@@ -32,4 +71,10 @@ html {
 
 .box-shadow {
     box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+.lifearth-logo {
+    height: 50px;
+    position: absolute;
+    top: 15px;
 }
